fix: comments after review

--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
     "vite": "^5.4.9",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
